--- a/src/courier/DeliveryStaffOrderPage.form
+++ b/src/courier/DeliveryStaffOrderPage.form
@@ -29,12 +29,12 @@
                   <Component id="jScrollPane1" alignment="0" min="-2" pref="652" max="-2" attributes="0"/>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="deliveryOrderlbl" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="assigndeliveryorderlbl" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
+                          <Component id="deliveryOrderlbl" min="-2" max="-2" attributes="0"/>
+                          <Component id="assigndeliveryorderlbl" min="-2" pref="234" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="addbtn" pref="67" max="32767" attributes="0"/>
+                          <Component id="viewbtn" pref="67" max="32767" attributes="0"/>
                           <Component id="backbtn" max="32767" attributes="0"/>
                       </Group>
                   </Group>
@@ -52,7 +52,7 @@
                       <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
                       <Component id="backbtn" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="addbtn" min="-2" max="-2" attributes="0"/>
+                      <Component id="viewbtn" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
@@ -82,7 +82,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="14" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Assigned Order"/>
+        <Property name="text" type="java.lang.String" value="Current need to be Delivered"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
@@ -107,15 +107,15 @@
         </Component>
       </SubComponents>
     </Container>
-    <Component class="javax.swing.JButton" name="addbtn">
+    <Component class="javax.swing.JButton" name="viewbtn">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="12" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Add"/>
+        <Property name="text" type="java.lang.String" value="view"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addbtnActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="viewbtnActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="backbtn">
