--- a/src/courier/ViewOrderDetails.form
+++ b/src/courier/ViewOrderDetails.form
@@ -123,18 +123,17 @@
                                               </Group>
                                               <EmptySpace max="-2" attributes="0"/>
                                               <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Group type="102" attributes="0">
-                                                      <Group type="103" groupAlignment="1" attributes="0">
-                                                          <Component id="itemlbl" alignment="1" min="-2" max="-2" attributes="0"/>
-                                                          <Component id="itemlbl1" alignment="1" min="-2" max="-2" attributes="0"/>
-                                                      </Group>
-                                                      <EmptySpace max="-2" attributes="0"/>
-                                                      <Group type="103" groupAlignment="0" attributes="0">
-                                                          <Component id="total1lbl" min="-2" pref="125" max="-2" attributes="0"/>
-                                                          <Component id="itemprice1lbl" min="-2" pref="125" max="-2" attributes="0"/>
-                                                      </Group>
+                                                  <Group type="103" groupAlignment="1" attributes="0">
+                                                      <Component id="itemlbl" alignment="1" min="-2" max="-2" attributes="0"/>
+                                                      <Component id="itemlbl1" alignment="1" min="-2" max="-2" attributes="0"/>
                                                   </Group>
-                                                  <Component id="shippingfee1lbl" min="-2" pref="149" max="-2" attributes="0"/>
+                                                  <Component id="itemlbl2" min="-2" max="-2" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="shippingfee1lbl" min="-2" pref="113" max="-2" attributes="0"/>
+                                                  <Component id="total1lbl" min="-2" pref="125" max="-2" attributes="0"/>
+                                                  <Component id="itemprice1lbl" min="-2" pref="125" max="-2" attributes="0"/>
                                               </Group>
                                           </Group>
                                           <Group type="102" attributes="0">
@@ -151,52 +150,47 @@
                                               <Component id="detailsOrderlbl" min="-2" pref="164" max="-2" attributes="0"/>
                                           </Group>
                                           <Group type="102" alignment="0" attributes="0">
-                                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                                  <Group type="102" attributes="0">
-                                                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-                                                      <Component id="length1lbl" min="-2" pref="101" max="-2" attributes="0"/>
-                                                      <EmptySpace max="32767" attributes="0"/>
-                                                      <Component id="height1lbl" min="-2" pref="101" max="-2" attributes="0"/>
-                                                  </Group>
-                                                  <Group type="102" attributes="0">
-                                                      <Group type="103" groupAlignment="0" attributes="0">
-                                                          <Component id="idcustlbl" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                          <Component id="custidlbl" alignment="0" min="-2" pref="158" max="-2" attributes="0"/>
-                                                      </Group>
-                                                      <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
-                                                      <Component id="iddeliverylbl" min="-2" max="-2" attributes="0"/>
-                                                  </Group>
-                                              </Group>
-                                              <EmptySpace max="-2" attributes="0"/>
                                               <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Component id="deliveryidlbl" min="-2" pref="158" max="-2" attributes="0"/>
-                                                  <Component id="Hcmlbl" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="idcustlbl" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="custidlbl" alignment="0" min="-2" pref="158" max="-2" attributes="0"/>
                                               </Group>
+                                              <EmptySpace min="-2" pref="75" max="-2" attributes="0"/>
+                                              <Component id="iddeliverylbl" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="deliveryidlbl" min="-2" pref="158" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <EmptySpace min="-2" pref="100" max="-2" attributes="0"/>
+                                              <Component id="Lcmlbl" min="-2" pref="19" max="-2" attributes="0"/>
+                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                              <Component id="heightlbl" min="-2" pref="13" max="-2" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="height1lbl" min="-2" pref="90" max="-2" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="Hcmlbl" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                   </Group>
                                   <Group type="102" attributes="0">
-                                      <EmptySpace min="-2" pref="144" max="-2" attributes="0"/>
-                                      <Component id="weight1lbl" min="-2" pref="112" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="150" max="-2" attributes="0"/>
+                                      <Component id="weight1lbl" min="-2" pref="88" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="kglbl" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <EmptySpace min="-2" pref="118" max="-2" attributes="0"/>
-                                      <Component id="widthlbl" min="-2" pref="21" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="122" max="-2" attributes="0"/>
+                                      <Component id="widthlbl" min="-2" pref="17" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="width1lbl" min="-2" pref="101" max="-2" attributes="0"/>
-                                      <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
+                                      <Component id="width1lbl" min="-2" pref="73" max="-2" attributes="0"/>
+                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                       <Component id="Wcmlbl" min="-2" pref="30" max="-2" attributes="0"/>
+                                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                      <Component id="lengthlbl" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="lengthlbl" min="-2" pref="16" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="113" max="-2" attributes="0"/>
-                                      <Component id="Lcmlbl" min="-2" pref="19" max="-2" attributes="0"/>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Component id="heightlbl" min="-2" pref="17" max="-2" attributes="0"/>
+                                      <Component id="length1lbl" min="-2" pref="101" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="10" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <Component id="deletebtn" min="-2" max="-2" attributes="0"/>
@@ -322,7 +316,6 @@
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                                      <Component id="widthlbl" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="lengthlbl" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="Wcmlbl" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
@@ -333,12 +326,16 @@
                                   <Component id="width1lbl" min="-2" pref="16" max="-2" attributes="0"/>
                                   <Component id="Hcmlbl" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Component id="height1lbl" alignment="0" min="-2" pref="16" max="-2" attributes="0"/>
+                                  <Component id="widthlbl" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" alignment="0" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="shippingfeelbl" min="-2" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="3" attributes="0">
+                                              <Component id="shippingfeelbl" alignment="3" min="-2" max="-2" attributes="0"/>
+                                              <Component id="itemlbl2" alignment="3" min="-2" max="-2" attributes="0"/>
+                                          </Group>
                                           <Component id="shippingfee1lbl" min="-2" pref="16" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace type="unrelated" min="-2" max="-2" attributes="0"/>
@@ -826,6 +823,14 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="12" style="0"/>
         </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="itemlbl2">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Dialog" size="12" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="RM"/>
       </Properties>
     </Component>
   </SubComponents>
